fixing align arrow of breadcrumbs

--- a/code/less/template.less
+++ b/code/less/template.less
@@ -2349,11 +2349,9 @@ a.wylia-readmore{
 	padding-bottom: 4px;
 	padding-top: 4px;
 	padding-left: 10px;
-	> a, > span{
-		vertical-align: middle;
-	}
 	a, span{
 		text-transform:lowercase;
+		vertical-align: middle;
 	}
 	span{
 		font-style: italic;
@@ -2362,6 +2360,7 @@ a.wylia-readmore{
 		display: inline-block;
 		.ie7-inline-block();
 		height: 9px;
+		vertical-align: middle;
 		width: 6px;
 	}
 }
